--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,75 +8,70 @@
 @import "~bootstrap/scss/bootstrap";
 
 .container {
+    border: 2px solid #5f30e2;
+    border-radius: 8px;
     width: 1200px;
     margin: 0 auto;
+    margin-top: 20px;
 }
 
-.form input {
-    border: 1px solid #ccc;
+.shadow {
+    box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
+        0 15px 40px rgba(166, 173, 201, 0.2);
+}
+
+.table {
+    margin-bottom: 20px;
+}
+
+p {
+    font-size: 20px;
+}
+
+h1 {
+    margin: 0;
     padding: 10px;
+    background-color: #5f30e2;
+    color: azure;
 }
-
-// .form button, button {
-//     padding: 10px;
-//     background-color: darksalmon;
-//     border: 1px solid darksalmon;
-//     color: #fff;
-//     cursor: pointer;
-// }
+.empty-cart {
+    text-align: center;
+    margin: 0 auto;
+    font-weight: bolder;
+    width: 100%;
+}
 
 button {
-    padding: 10px;
-    border-radius: 10px;
-    background-color: darksalmon;
-    border: 1px solid darksalmon;
-    color: #fff;
-    cursor: pointer;
+    margin: 5px;
 }
 
-button:hover {
-    background-color: #fff;
-    color: darksalmon;
+.btnCheckout {
+    margin: 20px;
+    padding: 5px 10px;
 }
 
-.list {
-    padding: 10px;
-}
-.list li {
-    list-style: square;
-    margin-bottom: 5px;
-    font-size: 18px;
-}
-.list li .delete {
-    font-size: 11px;
-    color: darksalmon;
-    margin-left: 5px;
-    vertical-align: middle;
-    cursor: pointer;
-}
+// .blue {
+//     border: 1px solid blue;
+//     background-color: blue;
+//     color: white;
+// }
 
-.blue {
-    border: 1px solid blue;
-    background-color: blue;
-    color: white;
-}
+// .red {
+//     color: red;
+// }
 
-.red {
-    color: red;
-}
+// .green {
+//     color: green;
+// }
 
-.green {
-    color: green;
-}
+// .show {
+//     display: block;
+// }
 
-.show {
-    display: block;
-}
+// .hidden {
+//     display: none;
+// }
 
-.hidden {
-    display: none;
-}
-
-button:disabled {
-    background-color:red;
-  }
+// button:disabled {
+//     background-color:red;
+//   }
